[tool.poetry]
name = "polygpt"
version = "0.1.0"
description = ""
authors = ["Princeps Polaris <polycapn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = "^3.8.6"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.0.0"
async-timeout = "4.0.3"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
blinker = "1.6.3"
bs4 = "0.0.1"
build = "0.10.0"
cachecontrol = "0.13.1"
cachy = "0.3.0"
certifi = "2023.7.22"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.1"
cleo = "2.0.1"
click = "8.1.7"
colorama = "0.4.6"
crashtest = ">=0.4.1"
cryptography = "41.0.5"
dataclasses-json = "0.6.1"
deprecated = "1.2.14"
distlib = "0.3.7"
distro = "1.8.0"
distro-info = "1.0"
dulwich = "0.21.6"
exceptiongroup = "1.1.3"
filelock = "3.13.0"
frozenlist = "1.4.0"
greenlet = "3.0.1"
html5lib = "1.1"
httplib2 = "0.22.0"
idna = "3.4"
importlib-metadata = "6.8.0"
installer = "0.7.0"
jaraco-classes = "3.3.0"
jeepney = "0.8.0"
joblib = "1.3.2"
jsonpatch = "1.33"
jsonpointer = "2.4"
jsonschema = "4.17.3"
jsonschema-specifications = "2023.7.1"
keyring = "24.2.0"
langsmith = "0.0.53"
launchpadlib = "1.11.0"
lazr-restfulclient = "0.14.5"
lazr-uri = "1.0.6"
lockfile = "0.12.2"
marshmallow = "3.20.1"
more-itertools = "10.1.0"
msgpack = "1.0.7"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
neo4j = "5.14.0"
netifaces = "0.11.0"
nltk = "3.8.1"
numpy = "1.26.1"
oauthlib = "3.2.2"
packaging = "23.2"
pastel = "0.2.1"
pexpect = "4.8.0"
pipenv = "2023.10.24"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.6.1"
poetry-core = "1.7.0"
poetry-plugin-export = "1.5.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
pygithub = "2.1.1"
pyjwt = "2.8.0"
pylev = "1.4.0"
pynacl = "1.5.0"
pyparsing = "3.1.1"
pyproject-hooks = "1.0.0"
pyrsistent = "0.20.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
pywin32-ctypes = "0.2.2"
pyyaml = "6.0.1"
rapidfuzz = "2.15.2"
referencing = "0.30.2"
regex = "2023.10.3"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rpds-py = "0.10.6"
secretstorage = "3.3.3"
setuptools = "68.2.2"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.5"
sqlalchemy = "2.0.22"
tenacity = "8.2.3"
textblob = "0.17.1"
tomli = "2.0.1"
tomlkit = "0.12.1"
tqdm = "4.66.1"
trove-classifiers = "2023.10.18"
typing-inspect = "0.9.0"
typing-extensions = "4.8.0"
urllib3 = "2.0.7"
virtualenv = "20.24.6"
wadllib = "1.3.6"
webencodings = "0.5.1"
wrapt = "1.15.0"
yarl = "1.9.2"
zipp = "3.17.0"
replicate = "^0.15.5"
pyautogen = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
